--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -6,7 +6,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.taskboard</groupId>
     <artifactId>auth</artifactId>
@@ -14,18 +13,19 @@
     <name>auth-service</name>
     <description>auth-service</description>
     <url/>
-    <licenses>
-        <license/>
-    </licenses>
+
     <developers>
-        <developer/>
+        <developer>
+            <name>Vlad</name>
+        </developer>
     </developers>
+
     <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
+        <connection>scm:git:https://github.com/Trayvor/taskboard.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:Trayvor/taskboard.git</developerConnection>
+        <url>https://github.com/Trayvor/taskboard</url>
     </scm>
+
     <properties>
         <java.version>21</java.version>
         <maven.checkstyle.plugin.configLocation>checkstyle.xml</maven.checkstyle.plugin.configLocation>
