--- a/templates/service-template/pom.xml
+++ b/templates/service-template/pom.xml
@@ -6,26 +6,25 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.portfolio</groupId>
     <artifactId>auth-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>TEMPLATE</name>
     <description>TEMPLATE</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
+    
     <developers>
-        <developer/>
+        <developer>
+            <name>Vlad</name>
+        </developer>
     </developers>
+
     <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
+        <connection>scm:git:https://github.com/Trayvor/taskboard.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:Trayvor/taskboard.git</developerConnection>
+        <url>https://github.com/Trayvor/taskboard</url>
     </scm>
+
     <properties>
         <java.version>21</java.version>
         <maven.checkstyle.plugin.configLocation>checkstyle.xml</maven.checkstyle.plugin.configLocation>
@@ -35,12 +34,10 @@
         <mapstruct.processor.version>1.6.3</mapstruct.processor.version>
         <jsonwebtoken.version>0.12.6</jsonwebtoken.version>
         <springdoc.version>2.1.0</springdoc.version>
+        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
+        <hibernate.version>6.6.8.Final</hibernate.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -79,6 +76,12 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -110,6 +113,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
 
