--- a/backend/auth-service/src/main/resources/application.properties
+++ b/backend/auth-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=auth-service
 server.servlet.context-path=/api
-spring.datasource.url=jdbc:mysql://localhost:3306/${USERS_MYSQL_DB_NAME}
-spring.datasource.username=${USERS_MYSQL_USERNAME}
-spring.datasource.password=${USERS_MYSQL_PASSWORD}
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
