--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
         else
           cd backend/${GITHUB_REF##*/}
         fi
+        pwd
 
     - name: Build with Maven
       run: mvn clean verify
