--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,17 +51,20 @@ jobs:
           sleep 5
         done
 
-    - name: Select service folder
-      run: |
+    - name: Build with Maven
+      run: | 
         if [[ -n "${GITHUB_HEAD_REF}" ]]; then
-          cd backend/${GITHUB_HEAD_REF##*/}
+            cd backend/${GITHUB_HEAD_REF##*/}
         else
           cd backend/${GITHUB_REF##*/}
         fi
-        pwd
-
-    - name: Build with Maven
-      run: mvn clean verify
+        mvn clean verify
 
     - name: Run tests with Maven
-      run: mvn test
+      run: |
+        if [[ -n "${GITHUB_HEAD_REF}" ]]; then
+            cd backend/${GITHUB_HEAD_REF##*/}
+        else
+          cd backend/${GITHUB_REF##*/}
+        fi
+        mvn test
