--- a/backend/user-service/src/main/resources/application.properties
+++ b/backend/user-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=auth-service
+spring.application.name=user-service
 server.servlet.context-path=/api
 spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.enabled=true
